# wagtail

./: README.md
.docksal/: .gitignore  README.md  docksal.env  docksal.yml  pyproject.toml
.docksal/base/: pyproject.toml
.docksal/commands/: eslint  manage.py  stylelint  sync_wagtail_libraries  test
.docksal/services/cli/: Dockerfile  crontab
.docksal/services/wagtail/: Dockerfile  entrypoint  requirements.txt  start
docroot/: README.md  README.txt  db.sqlite3  requirements.txt
docroot/wagtail_app/: pyproject.toml  settings.py  urls.py
